# risc-simulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp  remain things.txt  risc-simulator-structure.txt
backend/: CMakeLists.txt  Doxyfile  command_handler.cpp  command_handler.h  config.cpp  config.h  globals.cpp  globals.h  mainloop.cpp  mainloop.h  utils.cpp  utils.h  vm_asm_mw.cpp  vm_asm_mw.h  vm_runner.cpp  vm_runner.h
backend/assembler/: assembler.cpp  assembler.h  code_generator.cpp  code_generator.h  elf_util.cpp  elf_util.h  errors.cpp  errors.h  lexer.cpp  lexer.h  parser.cpp  parser.h  tokens.cpp  tokens.h
backend/assembler/parse_formats/: CMakeLists.txt  csr_formats.cpp  f_d_formats.cpp  i_m_formats.cpp  pseudo_formats.cpp
backend/common/: CMakeLists.txt  instructions.cpp  instructions.h  rounding_modes.h
backend/vm/: CMakeLists.txt  alu.cpp  alu.h  control_unit_base.cpp  control_unit_base.h  forwarding_unit.cpp  forwarding_unit.h  hazardUnit.cpp  hazardUnit.h  main_memory.cpp  main_memory.h  memory_controller.cpp  memory_controller.h  mmio_devices.h  pipelineRegisters.h  registers.cpp  registers.h  rvss_control_unit.cpp  rvss_control_unit.h  rvss_vm.cpp  rvss_vm.h  rvss_vm_pipelined.cpp  rvss_vm_pipelined.h  vm_base.cpp  vm_base.h
backend/vm/cache/: CMakeLists.txt  cache.cpp  cache.h
backend/vm/rv5s/: CMakeLists.txt
frontend/: BottomPanel.cpp  BottomPanel.h  CMakeLists.txt  InstructionInfo.cpp  InstructionInfo.h  RegisterTable.cpp  RegisterTable.h  VMExecutionThread.cpp  VMExecutionThread.h  autocompletewidget.cpp  autocompletewidget.h  codeeditor.cpp  codeeditor.h  controlstatustable.cpp  controlstatustable.h  datasegment.cpp  datasegment.h  errorconsole.cpp  errorconsole.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  processorwindow.cpp  processorwindow.h  registerpanel.cpp  registerpanel.h
